--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,24 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9bfa76">  <td>24/04/24 16:56:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.ws.testcase.TestLoginPage@2ab4bc72]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@925973605</td>   <td></td> </tr>
-<tr bgcolor="9bfa76">  <td>24/04/24 16:56:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.ws.testcase.TestLoginPage@2ab4bc72]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@925973605</td>   <td></td> </tr>
-<tr bgcolor="c3e77a">  <td>24/04/24 16:56:23</td>   <td>-20075</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestLoginPage.testForgotPassword()[pri:3, instance:com.ws.testcase.TestLoginPage@2ab4bc72]">testForgotPassword</td> 
-  <td>main@925973605</td>   <td></td> </tr>
-<tr bgcolor="9bfa76">  <td>24/04/24 16:56:20</td>   <td>-23609</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.ws.testcase.TestLoginPage@2ab4bc72]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@925973605</td>   <td></td> </tr>
-<tr bgcolor="c3e77a">  <td>24/04/24 16:55:53</td>   <td>-50717</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestLoginPage.testLoginPageTitle()[pri:1, instance:com.ws.testcase.TestLoginPage@2ab4bc72]">testLoginPageTitle</td> 
-  <td>main@925973605</td>   <td></td> </tr>
-<tr bgcolor="9bfa76">  <td>24/04/24 16:55:47</td>   <td>-56432</td> <td title="&gt;&gt;BaseTest.setUpReport()[pri:0, instance:com.ws.testcase.TestLoginPage@2ab4bc72]">&gt;&gt;setUpReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925973605</td>   <td></td> </tr>
-<tr bgcolor="9bfa76">  <td>24/04/24 16:56:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.ws.testcase.TestLoginPage@2ab4bc72]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@925973605</td>   <td></td> </tr>
-<tr bgcolor="c3e77a">  <td>24/04/24 16:55:57</td>   <td>-46054</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestLoginPage.testLoginFunctionality()[pri:2, instance:com.ws.testcase.TestLoginPage@2ab4bc72]">testLoginFunctionality</td> 
-  <td>main@925973605</td>   <td></td> </tr>
-<tr bgcolor="9bfa76">  <td>24/04/24 16:56:20</td>   <td>-23609</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.ws.testcase.TestLoginPage@2ab4bc72]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@925973605</td>   <td></td> </tr>
-<tr bgcolor="9bfa76">  <td>24/04/24 16:56:20</td>   <td>-23609</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.ws.testcase.TestLoginPage@2ab4bc72]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@925973605</td>   <td></td> </tr>
+<tr bgcolor="9bfa76">  <td>24/05/07 13:27:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.ws.testcase.PasswordRecoveryPage@2ab4bc72]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@508512860</td>   <td></td> </tr>
+<tr bgcolor="9bfa76">  <td>24/05/07 13:27:22</td>   <td>6035</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown(org.testng.ITestResult)[pri:0, instance:com.ws.testcase.PasswordRecoveryPage@2ab4bc72]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@508512860</td>   <td></td> </tr>
+<tr bgcolor="9bfa76">  <td>24/05/07 13:27:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.ws.testcase.PasswordRecoveryPage@2ab4bc72]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@508512860</td>   <td></td> </tr>
+<tr bgcolor="9bfa76">  <td>24/05/07 13:27:22</td>   <td>6035</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown(org.testng.ITestResult)[pri:0, instance:com.ws.testcase.PasswordRecoveryPage@2ab4bc72]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@508512860</td>   <td></td> </tr>
+<tr bgcolor="c3e77a">  <td>24/05/07 13:27:13</td>   <td>-2361</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PasswordRecoveryPage.testForgotPassword()[pri:1, instance:com.ws.testcase.PasswordRecoveryPage@2ab4bc72]">testForgotPassword</td> 
+  <td>main@508512860</td>   <td></td> </tr>
+<tr bgcolor="c3e77a">  <td>24/05/07 13:27:20</td>   <td>4496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PasswordRecoveryPage.testInvalidEmail()[pri:2, instance:com.ws.testcase.PasswordRecoveryPage@2ab4bc72]">testInvalidEmail</td> 
+  <td>main@508512860</td>   <td></td> </tr>
+<tr bgcolor="9bfa76">  <td>24/05/07 13:27:08</td>   <td>-7576</td> <td title="&gt;&gt;BaseTest.setUpReport()[pri:0, instance:com.ws.testcase.PasswordRecoveryPage@2ab4bc72]">&gt;&gt;setUpReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@508512860</td>   <td></td> </tr>
 </table>
